@@ -16,6 +16,10 @@ Changes/New Features Since 3.1M3:
 CAY-1608 Implement constructor injection support for DefaultAdhocObjectFactory
 CAY-1618 Create database adapters instances with proper injection
 
+Bug Fixes Since 3.1M3:
+
+CAY-1627 CayenneModeler: collection types for to-many relationships are not saved
+
 ----------------------------------
 Release: 3.1 M3
 Date: 
